--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,16 @@ serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
 thiserror = "1.0.56"
 once_cell = "1.8.0"
+tonic = "0.11.0"
+tokio-stream = {version = "*", features = ["net"]}
+prost = "0.12.3"
+tonic-reflection = "0.11.0"
+futures = "0.3.30"
+
+
+[dev-dependencies]
+futures-util = "*"
+anyhow = "*"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -21,3 +31,11 @@ crate-type = ["cdylib", "rlib"]
 [features]
 default = []
 cli = []
+
+[[bin]]
+name = "fresheyes-grpc"
+path = "src/server.rs"
+
+[build-dependencies]
+tonic-build = "0.11.0"
+
