--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ tokio-stream = {version = "*", features = ["net"]}
 prost = "0.12.3"
 tonic-reflection = "0.11.0"
 futures = "0.3.30"
+tower-http = "0.5.2"
+tonic-web = "0.11.0"
 
 
 [dev-dependencies]
