--- a/client/fresheyes-web/package.json
+++ b/client/fresheyes-web/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@improbable-eng/grpc-web": "^0.15.0",
+    "next": "14.1.0",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0",
-    "next-auth": "^4.24.4"
+    "ts-protoc-gen": "^0.15.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@protobuf-ts/protoc": "^2.8.1",
+    "@types/google-protobuf": "^3.15.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "google-protobuf": "^3.21.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "protoc-gen-grpc": "^2.0.3",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
