--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3.30"
 futures-util = "0.3.30"
 actix-web = "4.0.0"
 actix-service = "2.0.0"
+mockito = "1.4.0"
 
 [dev-dependencies]
 futures-util = "*"
