refactor project structure

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,13 +1,8 @@
 FROM rust:1.76.0-slim-buster as builder
 
-WORKDIR /usr/src/fresheyes-grpc
+WORKDIR /usr/src/fresh_eyes_api
 
 COPY . .
-
-RUN apt-get update && apt-get install -y protobuf-compiler-grpc
-
-# Install the required target
-RUN rustup target add x86_64-unknown-linux-gnu
 
 # Install the required dependencies
 RUN apt-get update && apt-get install -y \
@@ -18,10 +13,13 @@ RUN apt-get update && apt-get install -y \
     libssl-dev \
     libz-dev
 
+# Install the required target
+RUN rustup target add x86_64-unknown-linux-gnu
+
 # Build the application
-RUN cargo build --release --bin fresheyes-grpc
+RUN cargo build --release --bin fresh_eyes_api
 
 # Run the application
-ENTRYPOINT ["./target/release/fresheyes-grpc"]
+ENTRYPOINT ["./target/release/fresh_eyes_api"]
 
-EXPOSE 50051
+EXPOSE 8080
