--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,3 +1,4 @@
+# Stage 1: Building the application
 FROM rust:1.76.0-slim-buster as builder
 
 WORKDIR /usr/src/fresh_eyes_api
@@ -11,7 +12,8 @@ RUN apt-get update && apt-get install -y \
     pkg-config \
     libpq-dev \
     libssl-dev \
-    libz-dev
+    libz-dev \
+    ca-certificates
 
 # Install the required target
 RUN rustup target add x86_64-unknown-linux-gnu
@@ -19,7 +21,18 @@ RUN rustup target add x86_64-unknown-linux-gnu
 # Build the application
 RUN cargo build --release --bin fresh_eyes_api
 
+# Stage 2: Setting up the final image
+FROM debian:buster-slim
+
+WORKDIR /usr/src/fresh_eyes_api
+
+# Install the required libraries
+RUN apt-get update && apt-get install -y libssl1.1 ca-certificates
+
+# Copy the binary from the builder stage
+COPY --from=builder /usr/src/fresh_eyes_api/target/release/fresh_eyes_api .
+
 # Run the application
-ENTRYPOINT ["./target/release/fresh_eyes_api"]
+ENTRYPOINT ["./fresh_eyes_api"]
 
 EXPOSE 8080
