--- a/client/fresheyes-web/package.json
+++ b/client/fresheyes-web/package.json
@@ -12,6 +12,7 @@
     "@improbable-eng/grpc-web": "^0.15.0",
     "next": "14.1.0",
     "next-auth": "^4.24.4",
+    "octokit": "^3.1.2",
     "react": "^18",
     "react-dom": "^18",
     "ts-protoc-gen": "^0.15.0"
